--- a/jitpack.yml
+++ b/jitpack.yml
@@ -1,9 +1,11 @@
 jdk:
   - 21
 
-install:
-  - mvn clean install -DskipTests
-
 before_install:
   - sdk install java 21.0.2-tem
   - sdk use java 21.0.2-tem
+  - sdk install maven 3.9.9
+  - sdk use maven 3.9.9
+
+install:
+  - mvn clean install -DskipTests
