fix: add domain to request bodies and fix whereWithKeys format
- Add domain as string to find/create/update/delete requests
- Fix whereWithKeys to use where: {keys: [...]} format
- Add WhereClause sealed interface for type-safe where clauses
- Change create endpoint from /row/insert to /row
- Add integration tests with InventoryHistory model
- Update .gitignore to exclude CLAUDE.md and sensitive files

--- a/.gitignore
+++ b/.gitignore
@@ -95,6 +95,7 @@ replay_pid*
 
 # Claude Code
 .claude/
+CLAUDE.md
 
 # JetBrains
 cmake-build-*/
@@ -115,4 +116,3 @@ cmake-build-*/
 .idea/**/gradle.xml
 .idea/**/libraries
 .idea/**/mongoSettings.xml
-*.iws
